src/test/ui/iterators/invalid-iterator-chain.stderr
error[E0277]: the trait bound `i32: Sum<()>` is not satisfied
  --> $DIR/invalid-iterator-chain.rs:7:20
   |
LL |     println!("{}", scores.sum::<i32>());
   |                    ^^^^^^ --- required by a bound introduced by this call
   |                    |
   |                    the trait `Sum<()>` is not implemented for `i32`
   |
   = help: the following other types implement trait `Sum<A>`:
             <i32 as Sum<&'a i32>>
             <i32 as Sum>
note: the expression is of type `Map<std::slice::Iter<'_, ({integer}, {integer})>, [closure@$DIR/invalid-iterator-chain.rs:4:14: 4:22]>`
  --> $DIR/invalid-iterator-chain.rs:7:20
   |
LL |       let scores = vec![(0, 0)]
   |                    ------------ this expression has type `Vec<({integer}, {integer})>`
LL |           .iter()
   |            ------ associated type `std::iter::Iterator::Item` is `&({integer}, {integer})` here
LL |           .map(|(a, b)| {
   |  __________-
LL | |             a + b;
LL | |         });
   | |__________- associated type `std::iter::Iterator::Item` is `()` here
LL |       println!("{}", scores.sum::<i32>());
   |                      ^^^^^^
note: required by a bound in `std::iter::Iterator::sum`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         S: Sum<Self::Item>,
   |            ^^^^^^^^^^^^^^^ required by this bound in `std::iter::Iterator::sum`

error[E0277]: the trait bound `i32: Sum<()>` is not satisfied
  --> $DIR/invalid-iterator-chain.rs:10:9
   |
LL | /         vec![0, 1]
LL | |             .iter()
LL | |             .map(|x| x * 2)
LL | |             .map(|x| x as f64)
...  |
LL | |             .map(|x| { x + 1 })
LL | |             .map(|x| { x; })
   | |____________________________^ the trait `Sum<()>` is not implemented for `i32`
LL |               .sum::<i32>(),
   |                --- required by a bound introduced by this call
   |
   = help: the following other types implement trait `Sum<A>`:
             <i32 as Sum<&'a i32>>
             <i32 as Sum>
note: the expression is of type `Map<Map<Filter<Map<Map<Map<std::slice::Iter<'_, {integer}>, [closure@$DIR/invalid-iterator-chain.rs:12:18: 12:21]>, [closure@$DIR/invalid-iterator-chain.rs:13:18: 13:21]>, [closure@$DIR/invalid-iterator-chain.rs:14:18: 14:21]>, [closure@$DIR/invalid-iterator-chain.rs:15:21: 15:24]>, [closure@$DIR/invalid-iterator-chain.rs:16:18: 16:21]>, [closure@$DIR/invalid-iterator-chain.rs:17:18: 17:21]>`
  --> $DIR/invalid-iterator-chain.rs:17:14
   |
LL |         vec![0, 1]
   |         ---------- this expression has type `Vec<{integer}>`
LL |             .iter()
   |              ------ associated type `std::iter::Iterator::Item` is `&{integer}` here
LL |             .map(|x| x * 2)
   |              -------------- associated type `std::iter::Iterator::Item` is `{integer}` here
LL |             .map(|x| x as f64)
   |              ----------------- associated type `std::iter::Iterator::Item` is `f64` here
LL |             .map(|x| x as i64)
   |              ----------------- associated type `std::iter::Iterator::Item` is `i64` here
LL |             .filter(|x| *x > 0)
   |              ------------------ associated type `std::iter::Iterator::Item` is `i64` here
LL |             .map(|x| { x + 1 })
   |              ------------------ associated type `std::iter::Iterator::Item` is `i64` here
LL |             .map(|x| { x; })
   |              ^^^^^^^^^^^^^^^ associated type `std::iter::Iterator::Item` is `()` here
note: required by a bound in `std::iter::Iterator::sum`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         S: Sum<Self::Item>,
   |            ^^^^^^^^^^^^^^^ required by this bound in `std::iter::Iterator::sum`

error[E0277]: the trait bound `i32: Sum<()>` is not satisfied
  --> $DIR/invalid-iterator-chain.rs:20:20
   |
LL |     println!("{}", vec![0, 1].iter().map(|x| { x; }).sum::<i32>());
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ --- required by a bound introduced by this call
   |                    |
   |                    the trait `Sum<()>` is not implemented for `i32`
   |
   = help: the following other types implement trait `Sum<A>`:
             <i32 as Sum<&'a i32>>
             <i32 as Sum>
note: the expression is of type `Map<std::slice::Iter<'_, {integer}>, [closure@$DIR/invalid-iterator-chain.rs:20:42: 20:45]>`
  --> $DIR/invalid-iterator-chain.rs:20:38
   |
LL |     println!("{}", vec![0, 1].iter().map(|x| { x; }).sum::<i32>());
   |                    ---------- ------ ^^^^^^^^^^^^^^^ associated type `std::iter::Iterator::Item` is `()` here
   |                    |          |
   |                    |          associated type `std::iter::Iterator::Item` is `&{integer}` here
   |                    this expression has type `Vec<{integer}>`
note: required by a bound in `std::iter::Iterator::sum`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         S: Sum<Self::Item>,
   |            ^^^^^^^^^^^^^^^ required by this bound in `std::iter::Iterator::sum`

error[E0277]: the trait bound `i32: Sum<&()>` is not satisfied
  --> $DIR/invalid-iterator-chain.rs:21:20
   |
LL |     println!("{}", vec![(), ()].iter().sum::<i32>());
   |                    ^^^^^^^^^^^^^^^^^^^ --- required by a bound introduced by this call
   |                    |
   |                    the trait `Sum<&()>` is not implemented for `i32`
   |
   = help: the following other types implement trait `Sum<A>`:
             <i32 as Sum<&'a i32>>
             <i32 as Sum>
note: the expression is of type `std::slice::Iter<'_, ()>`
  --> $DIR/invalid-iterator-chain.rs:21:33
   |
LL |     println!("{}", vec![(), ()].iter().sum::<i32>());
   |                    ------------ ^^^^^^ associated type `std::iter::Iterator::Item` is `&()` here
   |                    |
   |                    this expression has type `Vec<()>`
note: required by a bound in `std::iter::Iterator::sum`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         S: Sum<Self::Item>,
   |            ^^^^^^^^^^^^^^^ required by this bound in `std::iter::Iterator::sum`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
